--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "lynx-trader-frontend",
   "version": "0.1.0",
   "private": true,
-  "description": "Modern React frontend for LynxTrader algorithmic trading platform",
+  "description": "Cyber-futuristic React frontend for LynxTrader algorithmic trading platform",
   "author": "LynxTrader Team",
   "license": "MIT",
   "scripts": {
@@ -13,39 +13,48 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5",
-    "lucide-react": "^0.294.0",
-    "recharts": "^2.8.0",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.8.4",
+    "@types/katex": "^0.16.7",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
+    "autoprefixer": "^10.0.1",
     "axios": "^1.6.2",
-    "framer-motion": "^10.16.5"
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.18.0",
+    "katex": "^0.16.22",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.4",
+    "postcss": "^8",
+    "react": "^18",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18",
+    "react-katex": "^3.1.0",
+    "react-particles": "^2.12.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.8.0",
+    "tailwindcss": "^3.3.6",
+    "tsparticles-slim": "^2.12.0",
+    "typescript": "^5"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/react-katex": "^3.0.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7"
   },
