--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -45,6 +46,7 @@
     "react-particles": "^2.12.2",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.8.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.3.6",
     "tsparticles-slim": "^2.12.0",
     "typescript": "^5"
