🔻 Add comprehensive shorting strategies system with AI enhancements, cyber frontend, and Haskell DSL integration

--- a/strategy-engine/lynx-dsl.cabal
+++ b/strategy-engine/lynx-dsl.cabal
@@ -22,6 +22,7 @@ library
       LynxDSL.Engine
       LynxDSL.Builder
       LynxDSL.Indicators
+      LynxDSL.ShortingStrategies
       
   other-modules:
       Paths_lynx_dsl
