--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,9 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.3.6",
     "tsparticles-slim": "^2.12.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "fastapi": "^0.68.0",
+    "uvicorn": "^0.18.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
